--- a/index.html
+++ b/index.html
@@ -2,18 +2,35 @@
 <html>
   <head>
     <title>Excursion</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <div id="excursion">
+      <h1>Discover hidden places in the world around you</h1>
+      <nav>
+        <a href="#excursion">Download Excursion (Coming soon!)</a>
+      </nav>
+    </br>
+    </div>
+
+    <video autoplay loop>
+      <source src="C:\Users\princ\Downloads\excursion.mp4" width="404" height="720">
+      Video not supported
+    </video>
+
+    <div id="guide">
+      <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" />
+        </br></br>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" />
+      <h2>Comming Soon for iPhone and Android</h2>
+    </div>
+
     <nav>
       <a href="#excursion">Download Excursion (Coming soon!)</a>
     </nav>
-    <h2>Your personal travel guide</h2>
-      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <h2>Comming Soon for iPhone and Android</h2>
-    <nav>
-      <a href="#excursion">Download Excursion (Coming soon!)</a>
-    </nav>
+
+    <p id="copyright">&copy Excursion</p>
   </body>
 </html>
