--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     </div>
 
     <video autoplay loop>
-      <source src="C:\Users\princ\Downloads\excursion.mp4" width="404" height="720">
+      <source src="C:\cygwin64\home\Rebecca\excursion\resources\video\excursion.mp4" width="404" height="720">
       Video not supported
     </video>
 
     <div id="guide">
       <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" />
+        <img src="C:\cygwin64\home\Rebecca\excursion\resources\images\camp.jpg"/>
         </br></br>
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" />
-      <h2>Comming Soon for iPhone and Android</h2>
+        <img src="C:\cygwin64\home\Rebecca\excursion\resources\images\phone.png"/>
     </div>
+
+    <h2>Comming Soon for iPhone and Android</h2>
 
     <nav>
       <a href="#excursion">Download Excursion (Coming soon!)</a>
