--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+  <!---Header--->
+
     <div id="excursion">
       <h1>Discover hidden places in the world around you</h1>
       <nav>
@@ -13,17 +16,21 @@
     </br>
     </div>
 
+  <!---Video--->
+
     <video autoplay loop>
-      <source src="C:\cygwin64\home\Rebecca\excursion\resources\video\excursion.mp4" width="404" height="720">
+      <source src="./resources/video/excursion.mp4" width="404" height="720">
       Video not supported
     </video>
+    
+  <!---Guide--->
 
     <div id="guide">
       <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <img src="C:\cygwin64\home\Rebecca\excursion\resources\images\camp.jpg"/>
+        <img src="./resources/images/camp.jpg"/>
         </br></br>
-        <img src="C:\cygwin64\home\Rebecca\excursion\resources\images\phone.png"/>
+        <img src="./resources/images/phone.png"/>
     </div>
 
     <h2>Comming Soon for iPhone and Android</h2>
@@ -31,6 +38,8 @@
     <nav>
       <a href="#excursion">Download Excursion (Coming soon!)</a>
     </nav>
+
+  <!---Footer--->
 
     <p id="copyright">&copy Excursion</p>
   </body>
